--- a/resources/nginx/kibana.mustache
+++ b/resources/nginx/kibana.mustache
@@ -2,8 +2,8 @@ server {
     listen 5602;
     ssl on;
     server_name {{domain}};
-    ssl_certificate /etc/nginx/ssl/{{domain}.crt;
-    ssl_certificate_key /etc/nginx/ssl/{{domain}}.key;
+    ssl_certificate /etc/nginx/ssl/{{hostname}}.{{domain}}.crt;
+    ssl_certificate_key /etc/nginx/ssl/{{hostname}}.{{domain}}.key;
     ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
     ssl_prefer_server_ciphers on;
     ssl_ciphers "EECDH+ECDSA+AESGCM EECDH+aRSA+AESGCM EECDH+ECDSA+SHA384 EECDH+ECDSA+SHA256 EECDH+aRSA+SHA384 EECDH+aRSA+SHA256 EECDH+aRSA+RC4 EECDH EDH+aRSA !RC4 !aNULL !eNULL !LOW !3DES !MD5 !EXP !PSK !SRP !DSS";
@@ -11,11 +11,16 @@ server {
     ssl_dhparam /etc/nginx/ssl/dhparam.pem;
 
     # We use a variable so nginx doesn't resovle DNS only at startup.
-    set $upstream_endpoint http://localhost:5601;
+    set $upstream_endpoint 127.0.0.1:5601;
 
     # install htpasswd: sudo apt-get install apache2-utils
-    # generate pass hash: htpasswd -c /etc/nginx/htpasswd.elasticsearch username1
+    # generate pass hash: htpasswd -c /etc/nginx/htpasswd.kibana username1
     auth_basic "Protected";
     auth_basic_user_file htpasswd.kibana;
+
+    location ~ {
+        proxy_pass http://$upstream_endpoint;
+        proxy_http_version 1.1;
+    }
 
 }
